# schema-guard

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  demo_telemetry.py  docker-compose.yml  go.mod  go.sum  index.html  landing.html  main.go  progress.md  scope.md
.github/workflows/: ci.yml
api/: models.go  openapi.yaml  server.go  server_bdd_test.go
core/registry/: registry.go
core/retry/: circuit_breaker.go  engine.go  engine_test.go  models.go
core/validator/: validator.go  validator_test.go
dashboard/: package-lock.json  package.json
dashboard/src/: App.test.tsx  App.tsx  index.css
docs/: architecture.md
drift/: alerting.py  detector.py
helm/schemaguard/: Chart.yaml  values.yaml
helm/schemaguard/templates/: deployment-api.yaml
integrations/langchain/: schemaguard_parser.py
integrations/openapi/: parser.go
integrations/opentelemetry/: metrics.go
sdks/python/: README.md  pyproject.toml
sdks/python/schemaguard/: __init__.py  client.py  local.py
sdks/python/tests/: test_local_validator_bdd.py
