[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schemaguard"
version = "0.1.0"
description = "Structured Output Validator & Schema Enforcer SDK"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jsonschema>=4.0.0",
    "pydantic>=2.0.0",
    "requests>=2.25.0"
]

[project.urls]
Homepage = "https://github.com/NayanSrivastav/schema-guard"
